--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxt/fonts": "^0.9.1",
     "@nuxtjs/color-mode": "^3.5.1",
+    "contentful": "^11.0.3",
     "gsap": "^3.12.5",
     "nuxt": "^3.13.0",
     "vue": "latest",
@@ -25,6 +26,7 @@
     "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^3.0.2",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@types/node": "^22.7.0",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
     "eslint": "^9.11.1",
