--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,7 @@
 {
+  "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
-    "target": "ES2018",
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "lib": ["ESNext", "ESNext.AsyncIterable", "DOM"],
-    "esModuleInterop": true,
-    "allowJs": true,
-    "sourceMap": true,
-    "strict": true,
-    "noEmit": true,
-    "baseUrl": ".",
-    "paths": {
-      "#app": [".nuxt/types/app/index.d.ts"],
-      "#app/*": [".nuxt/types/app/*"],
-      "~/*": ["./*"],
-      "@/*": ["./*"]
-    },
-    "types": ["@types/node", "nuxt"]
+    "resolveJsonModule": true
   },
-  "include": ["types/**/*.d.ts", ".nuxt/types/**/*.ts"],
-  "exclude": ["node_modules"],
-  "extends": "./.nuxt/tsconfig.json"
+  "exclude": ["node_modules"]
 }
