--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,11 @@
-{}
+{
+  "eslint.enable": true,
+  "eslint.workingDirectories": ["./"],
+  "eslint.options": {
+    "configFile": ".eslintrc.js"
+  },
+  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact", "vue"],
+  "editor.codeActionsOnSave": {
+    "source.fixAll": "always"
+  }
+}
