--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,5 @@
 {
-  "eslint.enable": true,
-  "eslint.workingDirectories": ["./"],
   "eslint.options": {
-    "configFile": ".eslintrc.js"
-  },
-  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact", "vue"],
-  "editor.codeActionsOnSave": {
-    "source.fixAll": "always"
+    "overrideConfigFile": ".eslintrc.js"
   }
 }
