--- a/package.json
+++ b/package.json
@@ -22,22 +22,16 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@nuxt/image": "^1.8.0",
     "@nuxt/types": "^2.18.1",
-    "@nuxt/typescript-build": "^3.0.2",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "@types/node": "^22.7.0",
-    "@typescript-eslint/eslint-plugin": "^8.7.0",
-    "@typescript-eslint/parser": "^8.7.0",
-    "eslint": "^9.11.1",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.13.0",
     "eslint-define-config": "^2.1.0",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-unicorn": "^55.0.0",
-    "eslint-plugin-vue": "^9.28.0",
-    "prettier": "^3.3.3",
-    "typescript": "^5.6.2"
+    "eslint-plugin-tailwindcss": "^3.17.5",
+    "eslint-plugin-vue": "^9.29.1",
+    "globals": "^15.11.0",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.11.0"
   }
 }
