--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-tailwindcss": "^3.17.5",
     "eslint-plugin-vue": "^9.29.1",
     "globals": "^15.11.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.11.0"
   }
