--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "clean": "rimraf .nuxt dist",
+    "prepare": "yarn format && yarn clean && yarn build"
   },
   "dependencies": {
     "@nuxt/fonts": "^0.9.1",
@@ -24,14 +26,13 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@nuxt/image": "^1.8.0",
-    "@nuxt/types": "^2.18.1",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "eslint": "^9.13.0",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "eslint-plugin-vue": "^9.29.1",
-    "globals": "^15.11.0",
     "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.11.0"
   }
