--- a/package.json
+++ b/package.json
@@ -26,14 +26,19 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@nuxt/image": "^1.8.0",
+    "@nuxt/test-utils": "^3.14.4",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^9.13.0",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "eslint-plugin-vue": "^9.29.1",
+    "happy-dom": "^15.7.4",
+    "playwright-core": "^1.48.2",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "typescript": "^5.6.2",
-    "typescript-eslint": "^8.11.0"
+    "typescript-eslint": "^8.11.0",
+    "vitest": "^2.1.4"
   }
 }
